# Raider-Bots

./: .breakpoints  .gitignore  .replit  Bot.py  Pipfile  Procfile  Utilities.py  app.json  botConfig.json  bot_class_def.py  bots_online.py  commands.py  date_functions.py  endpoints.py  find_date_difference.py  get_bond_discounts.py  get_server_id.py  get_token_values.py  main.py  old-requirements.txt  oldPipfile  procfile  pyproject.toml  replit-deploy.json  requirements.txt  reset_timer_update.py  run.bash  test_mode.py  timer_calc.py  tournament_timer_update.py  updateAllBots.py  update_bot_name.py
newBot/: newbot.py  newbot_command_list.py
old/: main1.py  set_tourney_time.py  tournamentDb
scripts/: bot_class_def.py  date_functions.py  endpoints.py  get_token_values.py  reset_timer_update.py  runtime.txt  tournament_timer_update.py
tests/: basic_run_test.py
